Update cloud manager to v1.23.0

--- a/tests/golden/defaults/cm-hetznercloud/cm-hetznercloud/10_kustomize/cloud-manager/apps_v1_deployment_hcloud-cloud-controller-manager.yaml
+++ b/tests/golden/defaults/cm-hetznercloud/cm-hetznercloud/10_kustomize/cloud-manager/apps_v1_deployment_hcloud-cloud-controller-manager.yaml
@@ -15,12 +15,12 @@ spec:
         app: hcloud-cloud-controller-manager
     spec:
       containers:
-      - command:
-        - /bin/hcloud-cloud-controller-manager
+      - args:
         - --allow-untagged-cloud
         - --cloud-provider=hcloud
-        - --leader-elect=false
         - --route-reconciliation-period=30s
+        - --webhook-secure-port=0
+        - --leader-elect=false
         env:
         - name: HCLOUD_NETWORK
           valueFrom:
@@ -32,11 +32,19 @@ spec:
             secretKeyRef:
               key: token
               name: hcloud
-        - name: NODE_NAME
+        - name: ROBOT_PASSWORD
           valueFrom:
-            fieldRef:
-              fieldPath: spec.nodeName
-        image: docker.io/hetznercloud/hcloud-cloud-controller-manager:v1.16.0
+            secretKeyRef:
+              key: robot-password
+              name: hcloud
+              optional: true
+        - name: ROBOT_USER
+          valueFrom:
+            secretKeyRef:
+              key: robot-user
+              name: hcloud
+              optional: true
+        image: docker.io/hetznercloud/hcloud-cloud-controller-manager:v1.23.0
         name: hcloud-cloud-controller-manager
         ports:
         - containerPort: 8233
@@ -47,7 +55,7 @@ spec:
             memory: 50Mi
       dnsPolicy: Default
       priorityClassName: system-cluster-critical
-      serviceAccountName: cloud-controller-manager
+      serviceAccountName: hcloud-cloud-controller-manager
       tolerations:
       - effect: NoSchedule
         key: node.cloudprovider.kubernetes.io/uninitialized
